- Fixing Button - Fixing Panorama on mobile

--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ p {
 
 .title-button-wrapper {
     position: absolute;
-    top: 600px;
+    bottom: 40px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 50;
@@ -1019,8 +1019,7 @@ i {
     }
 
     .title-button-wrapper {
-        top: auto;
-        bottom: 600px;
+        bottom: 20px;
         left: 50%;
         scale: 1;
         transform: translateX(-50%) scale(0.9);
